# workshop-docker

./: README.md  app.py  pyproject.toml
