[tool.poetry]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = ["noelnunesds <noelnunescosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
